--- a/backend/package.json
+++ b/backend/package.json
@@ -38,6 +38,7 @@
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "^4.0.0",
     "nodemon": "^2.0.15",
-    "prettier": "2.5.1"
+    "prettier": "2.5.1",
+    "prettier-eslint": "^15.0.1"
   }
 }
