--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -15,8 +15,10 @@
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": ["react", "import"],
+  "plugins": ["react", "import", "prettier"],
   "rules": {
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+    "prettier/prettier": "error",
     "no-console": "off",
     "no-restricted-syntax": [
       "error",
@@ -25,6 +27,7 @@
         "message": "You can only call the error() and warn() functions from the console object"
       }
     ],
+
     "react/react-in-jsx-scope": "off",
     "react/jsx-one-expression-per-line": "off",
     "react/no-unescaped-entities": "off"
@@ -37,8 +40,7 @@
           "@components": "./src/components",
           "@pages": "./src/pages",
           "@services": "./src/services"
-        },
-        "extensions": [".js", ".jsx"]
+        }
       }
     }
   }
