--- a/package.json
+++ b/package.json
@@ -15,10 +15,32 @@
   "author": "Wild Code School",
   "license": "ISC",
   "devDependencies": {
+    "ava": "^4.3.0",
     "concurrently": "^7.2.2",
-    "husky": "^7.0.4"
+    "eslint": "^8.19.0",
+    "eslint-plugin-ava": "^1.3.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "husky": "^7.0.4",
+    "prettier": "2.7.1",
+    "xo": "^0.50.0"
   },
   "dependencies": {
-    "eslint": "^8.18.0"
-  }
+    "builtin-modules": "^1.1.1",
+    "lodash.cond": "^4.2.0",
+    "lodash.find": "^4.2.0",
+    "pkg-up": "^1.0.0",
+    "react-router-dom": "^6.3.0"
+  },
+  "optionalDependencies": {
+    "lodash.isarray": "^4.0.0"
+  },
+  "peerDependencies": {
+    "react": ">=15.0.0 <16.0.0"
+  },
+  "bundledDependencies": [
+    "@generated/foo"
+  ],
+  "bundleDependencies": [
+    "@generated/foo"
+  ]
 }
