--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
+  },
   "scripts": {
     "dev": "nodemon index.js",
     "migrate": "node migrate.js",
@@ -14,10 +18,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "mysql2": "^2.3.3",
+    "nodejs": "^0.0.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
     "template-fullstack": "file:.."
   },
   "rules": {
@@ -32,7 +40,7 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^8.11.0",
+    "eslint": "8.19.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.25.4",
