--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
   "author": "Wild Code School",
   "license": "ISC",
   "devDependencies": {
+    "@babel/preset-react": "^7.18.6",
     "concurrently": "^7.2.2",
     "husky": "^7.0.4"
   },
   "dependencies": {
-    "eslint": "^8.18.0"
+    "axios": "^0.27.2",
+    "eslint": "^8.18.0",
+    "react-router-dom": "^6.3.0"
   }
 }
