--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "devDependencies": {
     "ava": "^4.3.0",
     "concurrently": "^7.2.2",
-    "eslint": "^8.19.0",
+    "eslint": "8.19.0",
     "eslint-plugin-ava": "^1.3.0",
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^7.0.4",
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "builtin-modules": "^1.1.1",
+    "eslint-formatter-pretty": "^4.1.0",
     "lodash.cond": "^4.2.0",
     "lodash.find": "^4.2.0",
     "pkg-up": "^1.0.0",
