onglet contact structure ok

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -23,7 +23,7 @@
     "prettier/prettier": 0,
     "no-console": "off",
     "indent": "error",
-    "quotes": ["double"],
+    "quotes": 0,
     "no-restricted-syntax": [
       "error",
       {
