--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "lodash.isarray": "^4.0.0"
   },
   "peerDependencies": {
-    "react": ">=15.0.0 <16.0.0"
+    "react": "^18.2.0"
   },
   "bundledDependencies": [
     "@generated/foo"
