--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,20 @@
         "latex",
         "plaintext",
         "css"
+    ],
+    "cSpell.words": [
+        "avant",
+        "choix",
+        "dancefloor",
+        "dépenser",
+        "evenement",
+        "évènements",
+        "papilles",
+        "Papilles",
+        "proximité",
+        "restaurantvideo",
+        "satisfaire",
+        "trouverez",
+        "vous"
     ]
 }
