--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,16 +11,19 @@
     "cSpell.words": [
         "avant",
         "choix",
+        "contacter",
         "dancefloor",
         "dépenser",
         "evenement",
         "évènements",
+        "eventquard",
         "papilles",
         "Papilles",
         "proximité",
         "restaurantvideo",
         "satisfaire",
         "trouverez",
+        "verre",
         "vous"
     ]
 }
