--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,9 @@
   "extends": [
     "plugin:react/recommended",
     "airbnb",
-    "plugin:prettier/recommended"
+    "plugin:prettier/recommended",
+    "some-other-config-you-use",
+    "prettier"
   ],
   "parserOptions": {
     "ecmaFeatures": {
@@ -19,6 +21,7 @@
   "plugins": ["react", "import", "prettier"],
   "rules": {
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+    "indent": "error",
     "prettier/prettier": "error",
     "no-console": "off",
     "no-restricted-syntax": [
