--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.2",
     "mysql2": "^2.3.3",
     "nodejs": "^0.0.0",
+    "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "template-fullstack": "file:.."
