--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,15 @@
     "fix": "prettier --write . && eslint --fix --ext .jsx ."
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "prop-types": "^15.8.1",
-    "react": "^18.0.0",
+    "react": "^18.2.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
     "template-fullstack": "file:.."
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.18.6",
     "@vitejs/plugin-react": "^1.0.7",
     "eslint": "^8.11.0",
     "eslint-config-airbnb": "^19.0.4",
