--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,19 +9,28 @@
         "css"
     ],
     "cSpell.words": [
+        "accueil",
         "avant",
+        "barnav",
         "choix",
         "contacter",
         "dancefloor",
         "dépenser",
+        "erreur",
         "evenement",
         "évènements",
         "eventquard",
+        "icone",
+        "liste",
+        "Navbaraccueil",
         "papilles",
         "Papilles",
+        "Projet",
         "proximité",
+        "ressort",
         "restaurantvideo",
         "satisfaire",
+        "slidein",
         "trouverez",
         "verre",
         "vous"
