--- a/package.json
+++ b/package.json
@@ -18,15 +18,21 @@
     "@babel/preset-react": "^7.18.6",
     "concurrently": "^7.2.2",
     "eslint": "^8.19.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-google": "^0.14.0",
     "eslint-plugin-ava": "^1.3.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^7.0.4",
     "prettier": "2.7.1",
     "xo": "^0.50.0"
   },
   "dependencies": {
     "axios": "^0.27.2",
-    "eslint": "^8.18.0",
+    "react": "^18.2.0",
     "react-router-dom": "^6.3.0"
   }
 }
