--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "dev": "nodemon index.js",
     "migrate": "node migrate.js",
-    "start": "node index.js",
+    "start": "node index.jsx",
     "lint": "echo '----- Checking Backend...' && npx prettier --debug-check . && eslint --ext .js . && echo '----- Done!'",
     "fix": "prettier --write . && eslint --fix --ext .js ."
   },
@@ -41,13 +41,17 @@
     ]
   },
   "devDependencies": {
+    "babel-plugin-transform-react-jsx": "^6.24.1",
     "eslint": "8.19.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "^4.0.0",
-    "nodemon": "^2.0.15",
+    "nodemon": "^2.0.19",
     "prettier": "2.5.1",
-    "prettier-eslint": "^15.0.1"
+    "prettier-eslint": "^15.0.1",
+    "webpack": "~4.42.1",
+    "webpack-cli": "~3.3.11",
+    "webpack-jsx-export": "^1.3.0"
   }
 }
