--- a/frontend/src/.babelrc
+++ b/frontend/src/.babelrc
@@ -2,8 +2,11 @@
   "presets": ["@babel/preset-env", "@babel/preset-react**"],
 
   "plugins": [
-    ["transform-react-jsx", {
-      "pragma": "dom" // default pragma is React.createElement
-    }]
+    [
+      "transform-react-jsx",
+      {
+        "pragma": "dom" // default pragma is React.createElement
+      }
+    ]
   ]
 }
