--- a/package.json
+++ b/package.json
@@ -15,25 +15,8 @@
   "author": "Wild Code School",
   "license": "ISC",
   "devDependencies": {
-    "@babel/preset-react": "^7.18.6",
-    "concurrently": "^7.2.2",
+    "concurrently": "^7.0.0",
     "eslint": "^8.19.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-auto": "^0.7.3",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-config-react-app": "^7.0.1",
-    "eslint-plugin-ava": "^1.3.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.6.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.30.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "husky": "^7.0.4",
-    "prettier": "2.7.1",
-    "xo": "^0.50.0"
-  },
-  "dependencies": {
-    "axios": "^0.27.2",
-    "react-router-dom": "^6.3.0"
+    "husky": "^7.0.0"
   }
 }
