--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "accueil",
         "avant",
         "barnav",
+        "Bienvenue",
         "choix",
         "contacter",
         "dancefloor",
@@ -21,7 +22,10 @@
         "évènements",
         "eventquard",
         "icone",
+        "linebreak",
         "liste",
+        "listevent",
+        "logoaccueil",
         "Navbaraccueil",
         "papilles",
         "Papilles",
