--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "concurrently": "^7.0.0",
     "eslint": "^8.19.0",
+    "eslint-plugin-react": "^7.30.1",
     "husky": "^7.0.0"
   }
 }
