Fonctions Google et ticketmaster opérationnelles

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,33 +10,67 @@
     ],
     "cSpell.words": [
         "accueil",
+        "activons",
         "avant",
+        "avec",
+        "backoff",
         "barnav",
+        "BFNII",
         "Bienvenue",
+        "Cette",
         "choix",
         "contacter",
+        "contrôle",
+        "coordonnées",
+        "Créer",
         "dancefloor",
+        "dans",
+        "défaut",
+        "définir",
+        "définissons",
         "dépenser",
+        "désactivons",
+        "dessus",
+        "doivent",
+        "elles",
         "erreur",
         "evenement",
         "évènements",
         "eventquard",
+        "excr",
         "icone",
+        "IJBT",
+        "Kfpw",
+        "l'élément",
+        "l'insèrer",
         "linebreak",
         "liste",
         "listevent",
         "logoaccueil",
         "Navbaraccueil",
+        "noscroll",
+        "Oosrlr",
         "papilles",
         "Papilles",
+        "placent",
+        "plaçons",
+        "pois",
         "Projet",
         "proximité",
         "ressort",
         "restaurantvideo",
+        "ROADMAP",
+        "routière",
+        "s'afficher",
         "satisfaire",
+        "scrollwheel",
+        "sert",
         "slidein",
+        "souris",
         "trouverez",
         "verre",
-        "vous"
+        "vous",
+        "wfey",
+        "Xauv"
     ]
 }
