--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "fix": "prettier --write . && eslint --fix --ext .js ."
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.12.0",
     "axios": "^0.27.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
