correction CSS et code

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,17 +11,25 @@
     "cSpell.words": [
         "accueil",
         "activons",
+        "ajouter",
         "avant",
         "avec",
         "backoff",
+        "barbody",
         "barnav",
         "BFNII",
+        "bien",
         "Bienvenue",
+        "caractères",
         "Cette",
         "choix",
+        "commentaires",
+        "Commentaires",
         "contacter",
+        "contexte",
         "contrôle",
         "coordonnées",
+        "Crée",
         "Créer",
         "dancefloor",
         "dans",
@@ -31,18 +39,30 @@
         "dépenser",
         "désactivons",
         "dessus",
+        "destructuration",
         "doivent",
         "elles",
+        "entete",
+        "envoyé",
+        "Envoyer",
         "erreur",
         "evenement",
+        "événement",
         "évènements",
         "eventquard",
         "excr",
+        "fichier",
+        "firstname",
+        "Firstname",
+        "formulaire",
+        "horaire",
+        "Horaire",
         "icone",
         "IJBT",
         "Kfpw",
         "l'élément",
         "l'insèrer",
+        "lastname",
         "linebreak",
         "liste",
         "listevent",
@@ -55,10 +75,13 @@
         "placent",
         "plaçons",
         "pois",
+        "Prénom",
         "Projet",
+        "propre",
         "proximité",
         "ressort",
         "restaurantvideo",
+        "réutiliser",
         "ROADMAP",
         "routière",
         "s'afficher",
@@ -68,7 +91,14 @@
         "slidein",
         "souris",
         "trouverez",
+        "utilisation",
         "verre",
+        "ville",
+        "Ville",
+        "Visiteur",
+        "visiteurs",
+        "votre",
+        "Votre",
         "vous",
         "wfey",
         "Xauv"
