--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,6 +23,7 @@
         "bouton",
         "btnback",
         "btnbillet",
+        "Capacité",
         "caractères",
         "carteevent",
         "Cette",
@@ -83,6 +84,7 @@
         "Oosrlr",
         "papilles",
         "Papilles",
+        "personnes",
         "placent",
         "plaçons",
         "pois",
@@ -105,6 +107,7 @@
         "sert",
         "slidein",
         "souris",
+        "titreeventcard",
         "trouverez",
         "utilisation",
         "vendeur",
